2001-08-01 John R. Jackson (jrj@purdue.edu)

	* client-src/sendsize.c: Prefix each debug line with sendsize process
	  information to make picking out the output from a particular estimate
	  run easier when maxdumps > 1.

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* server-src/amcheck.c: Unlink the temp files as soon as they are
	  created so they always go away when amcheck terminates.  Use
	  pipespawn() instead of system() to call the MAILER program.  Call
	  dbopen()/dbclose() in main() to write to a debug file instead of
	  stderr.

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/debug.c: Only rename files that end in ".debug".

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/pipespawn.c: Show empty pipespawn() args as "".

2001-07-31 John R. Jackson (jrj@purdue.edu)

	* server-src/conffile.h: Add support for tapetype "blocksize" keyword.
	* server-src/conffile.c: Add tapetype "blocksize" keyword.  Use
	  DISK_BLOCK_KB where appropriate instead of TAPE_BLOCK_SIZE.  Disallow
	  negative tape length and tapemark size.
	* common-src/alloc.c: Add new amtable_free() function.  Adjust args
	  to amtable_alloc() to be consistent with amtable_free().
	* common-src/amanda.h: Add new am_round() and am_floor() macros.
	  Define new DISK_BLOCK_KB, DISK_BLOCK_BYTES, MAX_TAPE_BLOCK_KB,
	  MAX_TAPE_BLOCK_BYTES constants.  Remove TAPE_BLOCK_SIZE and
	  TAPE_BLOCK_BYTES.
	* common-src/bsd-security.c: TAPE_BLOCK_BYTES -> NETWORK_BLOCK_BYTES.
	  Use -1 instead of DEFAULT_SIZE.
	* common-src/rsh-security.c: Ditto.
	* common-src/fileheader.c: Change write_header() to build_header().
	  Add blocksize arg.  Get rid of unused fill_buffer() function.
	* common-src/fileheader.h: Ditto.
	* common-src/stream.c: Use negative value to indicate default buffer
	  size.
	* common-src/stream.h: Add NETWORK_BLOCK_BYTES and STREAM_BUFSIZE
	  constants.  Remove DATABUF_SIZE and DEFAULT_SIZE.
	* man/amanda.8.in: Document the new "blocksize" tapetype keyword.